<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="myName">Name</string>
    <string name="trackName">Track</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="image">My Image</string>
    <string name="url">https://andela.com/alc</string>
    <string name="notification_error_ssl_cert_invalid">Invalid SSL certificate</string>
</resources>
